[project]
name = "microbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-litellm>=0.6.6",
    "langchain-openai>=1.2.2",
    "litellm>=1.87.1",
]
